--- a/backend/package.json
+++ b/backend/package.json
@@ -23,19 +23,27 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "6.10.1",
     "@quixo3/prisma-session-store": "^3.1.13",
     "@types/passport-local": "^1.0.38",
     "argon2": "^0.43.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "connect-mongodb-session": "^5.0.0",
     "connect-redis": "^9.0.0",
+    "cookie-parser": "^1.4.7",
     "express-session": "^1.18.1",
+    "helmet": "^8.1.0",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "redis": "^5.5.6",
     "reflect-metadata": "^0.2.2",
@@ -49,6 +57,8 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/connect-mongodb-session": "^2.4.8",
+    "@types/cookie-parser": "^1.4.9",
     "@types/express": "^5.0.0",
     "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.14",
